--- a/Mussie_Charley_Reynolds/index.html
+++ b/Mussie_Charley_Reynolds/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <head>
 <title>Mussie Charley Reynolds Texts</title>
-<link rel="stylesheet" href="//depts.washington.edu/sahtexts/css/main.css"></link>
+<link rel="stylesheet" href="../css/main.css"></link>
 <script src="../js/indigenous_texts.js"></script>
 <script src="../js/popcorn.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Abel|Bree+Serif" rel="stylesheet">
