--- a/Alex_Saluskin/tape_12/tape_12.html
+++ b/Alex_Saluskin/tape_12/tape_12.html
@@ -17,7 +17,7 @@
 </div>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Alex_Saluskin/tape_12/tape_12.mp3">hidden</a><pre>Length of recording: 13:06 (in Sahaptin). The recording was made by
+<a class="audio" href="https://archive.org/download/sahtext2/Alex_Saluskin/tape_12/tape_12.mp3">hidden</a><pre>Length of recording: 13:06 (in Sahaptin). The recording was made by
 Bruce Rigsby. He and Alex apparently never had time to transcribe and
 translate it, but when he learned that Virginia and Sharon were going
 through texts, he alerted us to the two texts by Alex Saluskin in
