--- a/Alex_Saluskin/tape_17/tape_17.html
+++ b/Alex_Saluskin/tape_17/tape_17.html
@@ -17,7 +17,7 @@
 </div>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Alex_Saluskin/tape_17/tape_17.mp3">hidden</a><pre>These texts consist of five Coyote legends and one legend about Cottontail and Grizzly. 
+<a class="audio" href="https://archive.org/download/sahtext2/Alex_Saluskin/tape_17/tape_17.mp3">hidden</a><pre>These texts consist of five Coyote legends and one legend about Cottontail and Grizzly. 
 Alex Saluskin grew up in the Wenatchee area speaking a slightly different dialect, Pshwánwapam. He
 moved to the lower Yakima River area at a young age, and became bidialectal. However, Virginia said
 (12-2-23) of his speech: &quot;It's a different dialect. That's the way his aunts spoke, and his
