--- a/Ellen_Saluskin/1-5-93/1-5-93.html
+++ b/Ellen_Saluskin/1-5-93/1-5-93.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#People who used to live along Yakima R. 0:05">People who used to live along Yakima R. 0:05</a></li><li><a href="#Traditional lifestyle 32:50">Traditional lifestyle 32:50</a></li><li><a href="#Engagement dance 39:23">Engagement dance 39:23</a></li><li><a href="#Death of a child 46:18">Death of a child 46:18</a></li><li><a href="#Helping stranded travellers 46:52">Helping stranded travellers 46:52</a></li><li><a href="#Getting roped into footing the bill for a celebration 54:34">Getting roped into footing the bill for a celebration 54:34</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/1-5-93/1-5-93.mp3">hidden</a><pre>Length of recording:  1:01:29 (original side A, 46:09; original side B, 15:20)
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/1-5-93/1-5-93.mp3">hidden</a><pre>Length of recording:  1:01:29 (original side A, 46:09; original side B, 15:20)
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
 once all the words had been identified, the free translation was
 smoothed out (by Sharon). The parentheticals are mostly explanatory comments made by Virginia
