--- a/Ellen_Saluskin/Ataw/ataw.html
+++ b/Ellen_Saluskin/Ataw/ataw.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#All that Alex Saluskin did for the tribe 0:04">All that Alex Saluskin did for the tribe 0:04</a></li><li><a href="#Remarks to current tribal council 10:03">Remarks to current tribal council 10:03</a></li><li><a href="#Attending a funeral in Celilo 23:46">Attending a funeral in Celilo 23:46</a></li><li><a href="#Camping at Celilo long ago 29:14">Camping at Celilo long ago 29:14</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/ataw/ataw.mp3">hidden</a><pre>Length of recording:  30:25
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/ataw/ataw.mp3">hidden</a><pre>Length of recording:  30:25
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
 once all the words had been identified, the free translation was
 smoothed out (by Sharon). The parentheticals are most explanatory comments made by Virginia
