--- a/Ellen_Saluskin/Baby/baby.html
+++ b/Ellen_Saluskin/Baby/baby.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#The man who died and returned 0:06">The man who died and returned 0:06</a></li><li><a href="#Epidemics 22:38">Epidemics 22:38</a></li><li><a href="#Plots against the Indians 37:49">Plots against the Indians 37:49</a></li><li><a href="#Self-reflection and reflection on family 42:34">Self-reflection and reflection on family 42:34</a></li><li><a href="#These recordings 47:44">These recordings 47:44</a></li><li><a href="#Being an elder 51:10">Being an elder 51:10</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/baby/baby.mp3">hidden</a><pre>Length of recording:  54:07
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/baby/baby.mp3">hidden</a><pre>Length of recording:  54:07
 This text was initially translated by Virginia Beavert, then mostly
 transcribed and glossed by Sharon Hargus (with Virginia's help in
 places). Then once all the words had been identified, the free
