--- a/Ellen_Saluskin/Bolon/bolon.html
+++ b/Ellen_Saluskin/Bolon/bolon.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Traditional subsistence activities 0:51">Traditional subsistence activities 0:51</a></li><li><a href="#Why and how Bolon was killed 5:34">Why and how Bolon was killed 5:34</a></li><li><a href="#Aftermath of Bolon's disappearance 40:11">Aftermath of Bolon's disappearance 40:11</a></li><li><a href="#Traditional subsistence activities 48:21">Traditional subsistence activities 48:21</a></li><li><a href="#Ditch-making 53:04">Ditch-making 53:04</a></li><li><a href="#Lower Cowlitz immigration 57:53">Lower Cowlitz immigration 57:53</a></li><li><a href="#Traditional subsistence activities 1:03:36">Traditional subsistence activities 1:03:36</a></li><li><a href="#Visit to Lower Cowlitz territory">Visit to Lower Cowlitz territory</a></li><li><a href="#Lower Cowlitz immigration 1:18:36">Lower Cowlitz immigration 1:18:36</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/bolon/bolon.mp3">hidden</a><pre>Length of recording:  1:30:13 (original cassette (side A) 0:47:28; (side B) 0:42:45)
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/bolon/bolon.mp3">hidden</a><pre>Length of recording:  1:30:13 (original cassette (side A) 0:47:28; (side B) 0:42:45)
 Ellen recorded herself.  It looks like the recording ended when the
 tape ran out, not when Ellen ran out of things to talk about.
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
