--- a/Ellen_Saluskin/Chief/chief.html
+++ b/Ellen_Saluskin/Chief/chief.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Background to Myáwax̲ legend 0:12">Background to Myáwax̲ legend 0:12</a></li><li><a href="#Myáwax̲ legend 6:16">Myáwax̲ legend 6:16</a></li><li><a href="#How to ask for help from Myáwax̲ 33:58">How to ask for help from Myáwax̲ 33:58</a></li><li><a href="#Postscript to Myáwax̲ legend 38:55">Postscript to Myáwax̲ legend 38:55</a></li><li><a href="#Ellen's previous visit to Myáwax̲ 43:56">Ellen's previous visit to Myáwax̲ 43:56</a></li><li><a href="#Preaching 48:57">Preaching 48:57</a></li><li><a href="#Personal family history 56:46">Personal family history 56:46</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/chief/chief.mp3">hidden</a><pre>Length of recording:  0:59:52
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/chief/chief.mp3">hidden</a><pre>Length of recording:  0:59:52
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
 once all the words had been identified, the free translation was
 smoothed out (by Sharon). The parentheticals are mostly explanatory comments made by Virginia
