--- a/Ellen_Saluskin/Colville/colville.html
+++ b/Ellen_Saluskin/Colville/colville.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Loss of fishing rights on completion of Grand Coulee Dam 2:22">Loss of fishing rights on completion of Grand Coulee Dam 2:22</a></li><li><a href="#Soap Lake 19:23">Soap Lake 19:23</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/colville/colville.mp3">hidden</a><pre>Length of recording:  26:47.
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/colville/colville.mp3">hidden</a><pre>Length of recording:  26:47.
 Recording made by Virginia Beavert, who has a short introduction.
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
 once all the words had been identified, the free translation was
