--- a/Ellen_Saluskin/Crane/crane.html
+++ b/Ellen_Saluskin/Crane/crane.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Traditional child rearing 0:08">Traditional child rearing 0:08</a></li><li><a href="#Crane legend 16:20">Crane legend 16:20</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/crane/crane.mp3">hidden</a><pre>\date
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/crane/crane.mp3">hidden</a><pre>\date
 Recording length:  1:03:26 (original cassette side A, 0:31:45; cassette side B, 0:31:40)
 This text was initially translated by Virginia Beavert, then mostly
 transcribed and glossed by Sharon Hargus (with Virginia's help in
