--- a/Ellen_Saluskin/Flu/flu.html
+++ b/Ellen_Saluskin/Flu/flu.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Flu">Flu</a></li><li><a href="#Plants">Plants</a></li><li><a href="#Coyote">Coyote</a></li><li><a href="#Coyote's eyes">Coyote's eyes</a></li><li><a href="#Coyote and the killer stone">Coyote and the killer stone</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/flu/flu.mp3">hidden</a><pre>Length of recording:  original cassette 0:45:10.
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/flu/flu.mp3">hidden</a><pre>Length of recording:  original cassette 0:45:10.
 These texts were initially translated by Virginia Beavert, and
 subsequently transcribed and glossed by Sharon Hargus, with Virginia's
 help in places. After the transcription and word/phrase glossing
