--- a/Ellen_Saluskin/Ft_Simcoe/ft_simcoe.html
+++ b/Ellen_Saluskin/Ft_Simcoe/ft_simcoe.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#History of allotments 0:01">History of allotments 0:01</a></li><li><a href="#Ellen's land holdings 9:26">Ellen's land holdings 9:26</a></li><li><a href="#Government assistance (welfare) 21:55">Government assistance (welfare) 21:55</a></li><li><a href="#Divorce and disputes with William Charlie 31:03">Divorce and disputes with William Charlie 31:03</a></li><li><a href="#Lower Cowlitz immigration 35:14">Lower Cowlitz immigration 35:14</a></li><li><a href="#Marrying an in-law 42:18">Marrying an in-law 42:18</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/ft_simcoe/ft_simcoe.mp3">hidden</a><pre>The cassette box was labelled &quot;History of religion Siɬáma - Kisawuu Ft. Simcoe&quot;, 
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/ft_simcoe/ft_simcoe.mp3">hidden</a><pre>The cassette box was labelled &quot;History of religion Siɬáma - Kisawuu Ft. Simcoe&quot;, 
 but the main topic is the history of allotments.  The size of an allotment was 80 acres.  Length: 0:46:10.
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by
 Sharon Hargus (with Virginia's help in places). Then once all the words had been identified, the
