--- a/Ellen_Saluskin/Husum/husum.html
+++ b/Ellen_Saluskin/Husum/husum.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Elders 0:00">Elders 0:00</a></li><li><a href="#Husum people 2:01">Husum people 2:01</a></li><li><a href="#Food preparation 11:44">Food preparation 11:44</a></li><li><a href="#People along the river 21:05">People along the river 21:05</a></li><li><a href="#Killing Indians from steamboat 26:10">Killing Indians from steamboat 26:10</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/husum/husum.mp3">hidden</a><pre>Length of recording:  29:36
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/husum/husum.mp3">hidden</a><pre>Length of recording:  29:36
 It looks like the recording ended when the
 tape ran out, not when Ellen ran out of things to talk about.
 Ellen recorded herself in July 1979, probably while visiting Virginia when she was working
