--- a/Ellen_Saluskin/Project/project.html
+++ b/Ellen_Saluskin/Project/project.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Activities in Richland area 0:00:02">Activities in Richland area 0:00:02</a></li><li><a href="#Medicine man work 0:01:26">Medicine man work 0:01:26</a></li><li><a href="#Subsistence activities in Richland area 0:08:40">Subsistence activities in Richland area 0:08:40</a></li><li><a href="#Food preparation and trade 0:12:35">Food preparation and trade 0:12:35</a></li><li><a href="#Spirit guides 0:16:58">Spirit guides 0:16:58</a></li><li><a href="#Subsistence activities 0:23:41">Subsistence activities 0:23:41</a></li><li><a href="#Warfare 0:25:26">Warfare 0:25:26</a></li><li><a href="#Fish harvest 0:47:38">Fish harvest 0:47:38</a></li><li><a href="#Camping in the wagon 0:52:22">Camping in the wagon 0:52:22</a></li><li><a href="#Cheating at bone game 1:02:12">Cheating at bone game 1:02:12</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/project/project.mp3">hidden</a><pre>Length of recording: 0:17:37. The original recording was on two sides of a cassette tape: (side A)
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/project/project.mp3">hidden</a><pre>Length of recording: 0:17:37. The original recording was on two sides of a cassette tape: (side A)
 0:46:50, (side B) 0:46:57. Side B included a blank space of 0:15:59, edited out of this recording.
 Ellen recorded herself. It looks like the recording ended when the tape ran out, not when Ellen ran
 out of things to talk about.
