--- a/Ellen_Saluskin/Rose/rose.html
+++ b/Ellen_Saluskin/Rose/rose.html
@@ -19,7 +19,7 @@
 <h2>Topics Covered in Text</h2><ol><li><a href="#Origin of Palouse relatives 0:00:01">Origin of Palouse relatives 0:00:01</a></li><li><a href="#Descendants of Wántux̲ 0:04:05">Descendants of Wántux̲ 0:04:05</a></li>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Ellen_Saluskin/Rose/rose.mp3">hidden</a><pre>Length of recording:  14:11, recorded on cassette tape side A only.
+<a class="audio" href="https://archive.org/download/sahtext2/Ellen_Saluskin/Rose/rose.mp3">hidden</a><pre>Length of recording:  14:11, recorded on cassette tape side A only.
 The cassette box was labelled &quot;for Rose Bassett&quot;. 
 Rose Bassett (nee Pinkham) was Joe Jay Pinkham's sister.
 This text was initially translated by Virginia Beavert, then mostly transcribed and glossed by Sharon Hargus (with Virginia's help in places). Then
