--- a/Mussie_Charley_Reynolds/mussie/mussie.html
+++ b/Mussie_Charley_Reynolds/mussie/mussie.html
@@ -17,7 +17,7 @@
 </div>
 <div id="window"></div>
 <div id="text">
-<a class="audio" href="//depts.washington.edu/sahtext3/Mussie_Charley_Reynolds/mussie/mussie.mp3">hidden</a><pre>Mussie [mjúzi] graduated from Tulalip Indian school. Her father was William Charley
+<a class="audio" href="https://archive.org/download/sahtext2/Mussie_Charley_Reynolds/mussie/mussie.mp3">hidden</a><pre>Mussie [mjúzi] graduated from Tulalip Indian school. Her father was William Charley
 (Lower Cowlitz). Ellen Saluskin was her older half-sister. (Atiniɬá was a Lower Cowlitz name.)
 The recorder of this text and date of recording are unknown.  Organ music plays faintly in the
 background during much of it.  The recording was divided onto 4 45 records, with the division sometimes cutting across
